--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example</groupId>
-    <artifactId>tornadofx-maven-project</artifactId>
+    <artifactId>graph.analis</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
 
